app/assets/stylesheets/base/app.scss
.main-homepage-container {
  width: 84%;
  margin: 0 auto;
  margin-top: 48px;
}


.welcome-splash {
  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
}

.welcome-where-to {
  color: #FF5A5F;
  font-weight: 700;
  font-size: 48px;
  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
}

.welcome-start-adventure {
  color: #4c4c4c;
  font-weight: 200;
  font-size: 48px;
  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
}

